# gemini_microapp

./: app.py  backend.py  cache_manager.py  database_manager.py  document_processor.py  oauth_manager.py  prompt.py  requirements.txt  start.sh  utils.py
auth/: __init__.py  authentication.py  google_oauth_manager.py
docs/: __init__.py  document_processor.py  knowledge.py
ui/: __init__.py  database_ui.py  display_results.py  html_styles.py
visa_docs_analysis/: docker-compose.yml
visa_docs_analysis/backend/: .env  Dockerfile  README.md  alembic.ini  dev.db  pyproject.toml
visa_docs_analysis/backend/app/: __init__.py  config.py  logging.py  main.py
visa_docs_analysis/backend/app/api/v1/: routes_auth.py  routes_health.py  routes_history.py  routes_tasks.py  ws.py
visa_docs_analysis/backend/app/db/: session.py
visa_docs_analysis/backend/app/db/migrations/: env.py
visa_docs_analysis/backend/app/db/migrations/versions/: 0001_initial.py  0002_oauth_tokens.py
visa_docs_analysis/backend/app/models/: __init__.py  analysis.py  base.py  document.py  oauth_token.py  task.py  user.py
visa_docs_analysis/backend/app/schemas/: task.py
visa_docs_analysis/backend/app/services/: analysis_service.py  document_processing.py  gemini.py  google_docs.py  google_oauth.py  progress.py  prompt_builder.py
visa_docs_analysis/backend/app/workers/: celery_app.py  jobs.py
